rs/macros/tests/ui/gservice_fails_export_fn_must_be_public.stderr
error: `export` attribute can be applied to public impls only
  --> tests/ui/gservice_fails_export_fn_must_be_public.rs:12:5
   |
12 |     fn this(&self, p1: bool) -> bool {
   |     ^^
